--- a/tasks/backup.yml
+++ b/tasks/backup.yml
@@ -4,6 +4,33 @@
   apt:
     name: s3cmd
 
+- name: Python and pip3 install 
+  package:
+     name: "{{ item }}"
+     state: present
+  loop: "{{ backup_notifications.requirements }}"
+  become: yes
+  when: backup_notifications.enabled 
+
+- name: Install aprise packages
+  pip:  
+    name:  apprise
+    state: present
+  become: yes
+  when: backup_notifications.enabled
+
+- name: Create a config dir
+  file:
+    path: "/etc/backup"
+    state: directory
+    mode: "600"
+
+- name: Create AWS credentials file
+  template:
+    src: credentials.j2
+    dest: "/etc/backup/credentials"
+    mode: "600"
+
 - name: Ensure log directory
   become: yes
   file:
