--- a/tasks/backup.yml
+++ b/tasks/backup.yml
@@ -25,11 +25,12 @@
     state: directory
     mode: "600"
 
-- name: Create AWS credentials file
+- name: Copy backup aprise config
   template:
-    src: credentials.j2
-    dest: "/etc/backup/credentials"
+    src: "apprise_config.j2"
+    dest: /etc/backup/apprise_config
     mode: "600"
+  when: backup_notifications.enabled and backup_notifications.apprise_target != ""
 
 - name: Ensure log directory
   become: yes
