--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -38,7 +38,7 @@ gitlab_apprise_address: "http://127.0.0.1:8000"
 send_backup_notifications: false
 s3cmd_host_base: "s3.amazonaws.com"
 s3cmd_host_bucket: "%(bucket)s.s3.amazonaws.com"
-
+s3cmd_website_endpoint: "http://%(bucket)s.s3-website-%(location)s.amazonaws.com/"
 
 # Vars for enable server-side global hooks
 hooks_folder: "{{ gitlab_home }}/data/gitaly/custom_hooks/pre-receive.d"
